# oncology-kidney-abnormality-segmentation

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.yml
src/kidney_abnormality_segmentation/: config.py  utils.py
src/kidney_abnormality_segmentation/postprocessing/: postprocess_segmentation_mask.py
src/kidney_abnormality_segmentation/preprocessing/: extract_roi.py
src/kidney_abnormality_segmentation/segmentation/: segment_ct_image.py
